Chat overflow auto scroll fix

--- a/slide/src/chatComponent/styles/chatscreen.scss
+++ b/slide/src/chatComponent/styles/chatscreen.scss
@@ -46,6 +46,8 @@
   margin: 0;
 }
 .chat_wrap {
+  overflow: scroll;
+  height: 100vh;
 }
 .chatTopLabelMeta {
   display: inline-block;
